<resources>
    <string name="app_name">Biblioteca online</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Log in failed"</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="library_info">Library info</string>
    <string name="available_books">Available books</string>
    <string name="User_Profile">User Profile</string>
    <string name="large_text">
        "Library Info Page \n\n"

        "Our library offers an app-archive for all the books from the library  \n\n"

        "The app is available for students and teachers. \n"
        "Each user can browse the books and choose one to read."
        "They have different options of list to add a book. \n"
        "To-Read is for the books they wish to read in the future."
        "Currently reading for the books they had already borrowed from the library."
        "Read list is for the books each user have read. \n\n"
    </string>

    <string name="hint_title">Add title here…</string>
    <string name="hint_author">Add author here…</string>
    <string name="hint_gender">Add gender here...</string>
    <string name="get">Get</string>
    <string name="get_all">Get All</string>

</resources>