<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewExample"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.85"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/cover"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="194dp"
        android:layout_height="79dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="101dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toStartOf="@+id/imageViewExample"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewExample" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="194dp"
        android:layout_height="79dp"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="176dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewExample"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>